# ShotForm

./: .gitignore  .impeccable.md  .lintstagedrc.json  .prettierignore  .prettierrc  AGENTS.md  DESIGN.md  HUNYUAN_SETUP.md  LICENSE  ShotForm系统设计文档_完整版.doc  eslint.config.js  index.html  package-lock.json  package.json  playwright.upload.config.ts  tailwind.config.js  vite.config.ts
docs/: 软件测试实验报告.md
models/: pose_landmarker_heavy.task
scripts/: fill_word.ps1  generate_system_design_doc.ps1  pose_detect.py  run_ci.py  tauri-wrapper.mjs  video_pose_detect.py
src/: App.copy-guard.test.js  App.route-film-transition.test.js  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: hunyuan.rs  mod.rs
src-tauri/src/analysis/: angles.rs  comparison.rs  mod.rs  shot_type.rs  suggestion_config.rs  suggestion_strategies.rs  suggestions.json  temporal.rs
src-tauri/src/commands/: analysis.rs  database.rs  image.rs  mod.rs  pose.rs
src-tauri/src/database/: models.rs  repository.rs
src-tauri/src/image/: mod.rs  processor.rs  visualization.rs
src-tauri/src/models/: types.rs
src-tauri/src/pose/: detector.rs  keypoints.rs  mod.rs
src-tauri/testdata/: README.md  shot_type_regression_samples.json
src/assets/: design-tokens-renewal.test.js  index.cinematic-theme.test.js  index.css
src/components/: AnalysisResult.vue  AppSidebar.vue  ComparisonView.workbench.test.js  ErrorBoundary.vue  FrameDeviationPanel.vue  HomeModuleGem.test.js  TitleBar.vue  (+10 more)
(+150 files in other folders)
